--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,27 @@
+/* GRID_SIZE = 16*16 */
+:root {
+    --grid-size: 16;
+}
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 
-    background-color: #BADA55;
+    background-color: black;
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 400px;
+    height: 400px;
+}
+
+.gridDiv {
+    border: 1px dotted white;
+    background-color: crimson;
+
+    width: calc(100% / var(--grid-size));
+    height: calc(100% / var(--grid-size));
 }
